--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,15 @@
 @import "components/badge.css";
 /*screens*/
 @import "screen/friends.css";
+@import "screen/find.css";
+@import "screen/more.css";
+@import "screen/settings.css";
 
 html,
 body {
   font-family: "Nunito Sans", sans-serif;
   width: 100%;
-  height: 105%;
+  height: 105vh;
   overflow-x: hidden;
   overflow-y: auto;
 }
