--- a/css/components/badge.css
+++ b/css/components/badge.css
@@ -18,6 +18,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  animation: bingle 1s ease-in-out infinite;
+}
+
+@keyframes bingle {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateY(360deg);
+  }
 }
 
 .dot__icon {
@@ -46,6 +56,44 @@
   position: absolute;
   right: 12px;
   top: 45px;
+}
+
+.badge__position {
+  display: flex;
+  justify-content: center;
+}
+
+.badge__date {
+  width: 155px;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  font-size: 13px;
+  padding: 7px 10px;
+  text-align: center;
+  border-radius: 30px;
+  margin-top: 15px;
+}
+
+.chat__bubble {
+  position: relative;
+}
+
+.badge__time {
+  font-size: 12px;
+  position: absolute;
+  right: -38px;
+  bottom: 0px;
+}
+
+.my__bubble {
+  position: relative;
+}
+
+.my__time {
+  font-size: 12px;
+  position: absolute;
+  left: -38px;
+  bottom: 0px;
 }
 
 /* chats 창 작업이랑 섞여있음 */
@@ -139,4 +187,37 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+/*animation*/
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+.fa-cog:hover {
+  animation: rotateCog 1.5s linear infinite;
+  will-change: contents;
+}
+
+@keyframes musicCode {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+
+  100% {
+    transform: none;
+  }
+}
+
+.fa-itunes-note:hover {
+  animation: musicCode 0.5s ease-in-out infinite;
 }
