--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -11,6 +11,26 @@ nav {
   align-items: center;
 }
 
+.nav__icons {
+  width: 100%;
+  height: 60px;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  animation: popUp 0.6s ease-in-out forwards;
+}
+
+@keyframes popUp {
+  from {
+    transform: translateY(30px);
+  }
+  to {
+    transform: translateY(0px);
+  }
+}
+
 .fa-user,
 .fa-comment,
 .fa-search {
