--- a/css/screen/media.css
+++ b/css/screen/media.css
@@ -21,7 +21,7 @@
   top: 0;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 650px), orientation (portrait) {
   .screen__size {
     display: none;
   }
