--- a/css/screen/settings.css
+++ b/css/screen/settings.css
@@ -1,5 +1,5 @@
 .settings {
-  padding: 40px 20px 20px 20px;
+  margin: 50px 25px 20px 25px;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
