--- a/css/components/user-profile.css
+++ b/css/components/user-profile.css
@@ -5,7 +5,8 @@
 
 .friends-contents {
   border-bottom: var(--setting);
-  padding: 20px 10px 20px 10px;
+  margin: 5px 10px 0px 10px;
+  padding: 20px 0px;
 }
 
 .user-profile-pic {
