--- a/css/screen/friends.css
+++ b/css/screen/friends.css
@@ -15,8 +15,9 @@
 .friends-header__column-second {
   display: flex;
   align-items: center;
-  padding: 0px 15px 0px 15px;
+  margin: 0px 25px 0px 25px;
 }
+
 .friends-header__column-second .fa-search,
 .friends-header__column-second .fab {
   padding: 0px 15px 0px 15px;
@@ -51,7 +52,7 @@
 .channel__column-first {
   display: flex;
   justify-content: space-between;
-  padding: 20px 10px 20px 10px;
+  margin: 20px 15px 20px 15px;
   color: rgba(0, 0, 0, 0.45);
   font-weight: 600;
 }
@@ -62,6 +63,7 @@
   align-items: center;
   border-bottom: var(--setting);
   padding: 0px 10px 30px 10px;
+  margin: 0px 10px 0px 10px;
 }
 
 .wrap {
@@ -92,7 +94,8 @@
 .friend__column-first {
   display: flex;
   justify-content: space-between;
-  padding: 20px 10px 20px 10px;
+  padding: 20px 10px 0px 0px;
+  margin: 0px 10px 20px 15px;
   color: rgba(0, 0, 0, 0.45);
   font-weight: 600;
 }
@@ -106,6 +109,7 @@
 
 .friend__column-second {
   display: flex;
+  margin: 0px 20px 0px 10px;
   justify-content: space-between;
   align-items: center;
 }
