--- a/css/components/user-profile.css
+++ b/css/components/user-profile.css
@@ -5,14 +5,14 @@
 
 .friends-contents {
   border-bottom: var(--setting);
-  margin: 5px 10px 0px 10px;
-  padding: 20px 0px;
+  padding: 20px 2px;
 }
 
 .user-profile-pic {
   width: 70px;
   height: 70px;
   border-radius: 25px;
+  margin-left: 10px;
 }
 
 .name {
