--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@ body {
   font-family: "Nunito Sans", sans-serif;
   width: 100vw;
   height: 105vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
   overflow-x: hidden;
   overflow-y: auto;
 }
