--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -11,7 +11,7 @@ body {
   text-align: center;
   position: fixed;
   top: 0;
-  width: 100%;
+
   background-color: white;
 }
 
@@ -56,7 +56,6 @@ header {
 }
 
 .signup__content-header-welcome {
-  width: 100%;
   font-size: 25px;
   font-weight: 600;
   text-align: center;
@@ -72,14 +71,16 @@ header {
 }
 
 form {
+  width: 90vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .signup__content-userinfo-email,
 .signup__content-userinfo-password {
-  width: 420px;
+  width: 85vw;
   font-size: 20px;
   margin: 0px 14px;
   padding: 20px 10px;
@@ -107,7 +108,7 @@ input::placeholder {
 .signup__content-userinfo-signup {
   margin: 10px 14px;
   padding: 20px;
-  width: 450px;
+  width: 85vw;
   font-size: 18px;
   background-color: rgba(0, 0, 0, 0.05);
 }
