--- a/css/screen/settings.css
+++ b/css/screen/settings.css
@@ -8,7 +8,7 @@
 .settings__title {
   font-size: 20px;
   font-weight: 700;
-  width: 33%;
+  width: 33vw;
   justify-content: center;
   text-align: center;
 }
