--- a/css/screen/chat.css
+++ b/css/screen/chat.css
@@ -77,6 +77,7 @@
 }
 
 .chatting__line {
+  width: 100%;
   background-color: white;
   height: 55px;
   display: flex;
@@ -87,7 +88,7 @@
   background-color: #f9f9fa;
   border: var(--setting);
   height: 35px;
-  width: 380px;
+  width: 350px;
   border-radius: 30px;
   margin-bottom: 5px;
   margin-right: 20px;
