--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
 html,
 body {
   font-family: "Nunito Sans", sans-serif;
-  width: 100vw;
+  width: 100%;
   height: 105vh;
 
   overflow-x: hidden;
